assets/styles/index.css
/* TODO: probably want to split out core styling for index.css
         and then move main page specific styling into new css.
*/

/* RESET STYLING */

/* makes sizing simpler */
*,
*::before,
*::after {
  box-sizing: border-box;
}

/* remove default spacing */
/* force styling of type through styling, rather than elements */
* {
  margin: 0;
  padding: 0;
  font: inherit;
}

/* dark mode user-agent-styles */
/* improves punctuation in supported browsers */
html {
  color-scheme: dark light;
  hanging-punctuation: first last;
}

/* min body height */
body {
  min-height: 100svh;
}

/* responsive images/videos */
img,
picture,
svg,
video {
  display: block;
  max-width: 100%;
}

/* Improved heading in supported browsers */
h1,
h2,
h3,
h4,
h5,
h6 {
  text-wrap: balance;
}

/* improve readability with max-width on paragraphs and lists */
/* prevent orphans in supported browsers */
p,
li {
  max-width: var(--p-max-width, 65ch);
  text-wrap: pretty;
}

/* remove anchor tag decoration but keep pointer */
a {
  all: unset;
  cursor: pointer;
}

/* END RESET */

:root {
  /* Colours */
  --clr-white: hsl(0, 0%, 100%);
  --clr-text: hsl(0, 0%, 86%);
  --clr-surface: hsl(206, 72%, 11%);

  --clr-orange-500: hsl(10, 100%, 50%);
  --clr-orange-400: hsl(10, 100%, 58%);
  --clr-orange-300: hsl(10, 100%, 70%);
  --clr-orange-200: hsl(10, 100%, 80%);
  --clr-navy-700: hsl(206, 85%, 5%);
  --clr-navy-400: hsl(206, 72%, 11%);
  --clr-navy-300: hsl(206, 50%, 20%);
  --clr-navy-100: hsl(206, 30%, 28%);

  /* Fonts */
  --fs-base: 16px;
  --ff-base: "Outfit", sans-serif;
  --ff-accent: "Young Serif", serif;
  --fw-regular: 400;
  --fw-bold: 600;
  --fw-bolder: 700;
  --fw-heavy: 900;
  --fw-thin: 200;
}

html {
  height: 100%;
  min-width: 20rem;
}

body {
  position: relative;
  display: flex;
  flex-direction: column;
  font-size: var(--fs-base);
  font-family: var(--ff-base);
  color: var(--clr-text);
  min-height: 100%;

  background-repeat: no-repeat;
  background-attachment: fixed;
  background-image: linear-gradient(var(--clr-navy-300), var(--clr-navy-700));
}

.resize-animation-stopper * {
  animation: none !important;
  transition: none !important;
}

h1 {
  font-size: 2rem;
  font-weight: var(--fw-heavy);
}

h2 {
  font-size: 1.75rem;
  font-weight: var(--fw-bold);
}

/* Layouts */
.flex {
  display: flex;
  flex-direction: row;
}

.grid {
  display: grid;
}

/* Classes */
header {
  position: sticky;
  top: 0;
  padding-block: 1rem;
  padding-inline: clamp(1rem, 5%, 5rem);
  justify-content: space-between;
  align-items: center;
  background-color: var(--clr-navy-100);
  width: 100%;
}

.link_header {
  text-decoration: none;
  color: var(--clr-text);
}

.primary-navigation {
  list-style: none;
  gap: 2rem;
  li {
    padding-block: 0.3rem;
  }
}

.mobile-nav-toggle {
  display: none;
}

.active {
  border-bottom: 1px solid var(--clr-text);
}

.nav-number {
  color: var(--clr-orange-400);
  text-shadow: 0px 0px 6px var(--clr-orange-400);
  font-weight: var(--fw-bolder);
  margin-inline-end: 0.5rem;
}

main {
  /* height: 200vh;
  display: block;
  overflow-x: hidden; */
}

.hero-container {
  gap: clamp(1rem, 3vh, 2rem);
  padding: 1.5rem 1rem;
  justify-items: center;
}

.hero_title {
  font-size: clamp(1.5rem, 8vw, 4rem);
  text-align: center;
}

.hero_subtitle {
  font-size: clamp(1.25rem, 5vw, 2rem);
  color: var(--clr-orange-400);
  font-weight: var(--fw-bold);
  padding-top: 2rem;
  text-align: center;
}

.hero-img {
  max-width: clamp(15rem, 75%, 25rem);
  border-radius: 50%;
}

.cta-button {
  padding-block: 0.5rem;
  padding-inline: 3rem;
  border-radius: 0.25rem;
  --button-bg: var(--clr-navy-400);
}

.cta-button:hover {
  --button-bg: transparent;
}

.gradient-border {
  background: linear-gradient(
        var(--button-bg, transparent),
        var(--button-bg, transparent)
      )
      padding-box,
    linear-gradient(45deg, var(--clr-orange-500), var(--clr-orange-300))
      border-box;
  border: 2px solid transparent;
  transition: background 1000ms linear;
}

.diagonal {
  padding-block: 3rem;
  width: 105%;
}

.diagonal-up {
  --angle: -5deg;
}

.diagonal-down {
  --angle: 5deg;
}

.diagonal > div {
  border-top: 4px solid white;
  position: relative;
  right: 2px;
  width: 100%;
  height: 100%;
  transform: rotate(var(--angle));
  transform-origin: center;
  z-index: -1;
}

footer {
  margin-top: auto;
  background-color: var(--clr-navy-700);
  height: 15rem;
  width: 100%;
}

/* Mobile nav button */
@media (max-width: 40em) {
  .primary-navigation {
    position: fixed;
    inset: 0 0 0 40%;
    z-index: 1000;
    flex-direction: column;
    padding: min(20vh, 4em) 2rem;
    background-color: var(--clr-navy-100);

    transform: translateX(100%);
    transition: 0.15s ease-in-out;
  }

  @supports (backdrop-filter: blur(1rem)) {
    .primary-navigation {
      background-color: hsl(206, 30%, 28%, 0.85);
      backdrop-filter: blur(1rem);
    }
  }

  .active {
    border-bottom: none;
  }

  .mobile-nav-toggle {
    --hamburger-span-gap: 0.5rem;
    --hamburger-span-height: 3px;
    position: absolute;
    display: flex;
    flex-direction: column;
    padding-top: 4px;
    gap: var(--hamburger-span-gap);
    border: none;
    right: 1.5rem;
    width: 2rem;
    aspect-ratio: 1;
    z-index: 9999;
    background-color: transparent;
    transition: 0.1s ease-in-out;
  }

  .mobile-nav-toggle span {
    display: block;
    height: var(--hamburger-span-height);
    width: 100%;
    left: 0;
    background-color: var(--clr-text);
    border-radius: 1em;

    /* animation */
    transform: rotate(0deg);
    transition: 0.15s ease-in-out;
  }

  .mobile-nav-toggle span {
    transform-origin: center;
  }

  .primary-navigation[open] {
    transform: translateX(0%);
    transition: 0.15s ease-in-out;
  }

  .mobile-nav-toggle[open] span:nth-child(1) {
    translate: 0 calc(var(--hamburger-span-gap) + var(--hamburger-span-height));
    rotate: 45deg;
  }

  .mobile-nav-toggle[open] span:nth-child(2) {
    width: 0%;
    opacity: 0;
  }

  .mobile-nav-toggle[open] span:nth-child(3) {
    translate: 0
      calc(-1 * (var(--hamburger-span-gap) + var(--hamburger-span-height)));
    rotate: -45deg;
  }
}

